pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-int-5.kore
[]
module INT
    hooked-sort Int{} [hook{}("INT.Int"), hasDomainValues{}()]
    alias abcdInt{}() : Int{} where abcdInt{}() := \dv{Int{}}("abcd") []
endmodule
[]
