pyk/src/tests/unit/kore/test-data/definitions/should-fail/test-int-5.kore.golden
Error:
  module 'INT':
  alias 'abcdInt' declaration (test-int-5.kore 4:11):
  \dv (test-int-5.kore 4:56):
  Verifying builtin sort 'INT.Int':
  While parsing domain value:
    <string literal>:1:1:
      |
    1 | abcd
      | ^
    unexpected 'a'
    expecting '+', '-', or integer

